--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,6 +8,7 @@
 		<!-- Your code goes here-->
 
 	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
+		<iframe src="exp.html"></iframe>
+		<script src="./js/main.js"></script>
 </body>
 </html>
